| Summary: | ASTERISK-27692: bridging: Sometimes cloning the stream topology causes a crash | ||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||
| Date Opened: | 2018-02-20 11:40:10.000-0600 | Date Closed: | 2018-02-22 13:35:45.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Bridges/bridge_simple | ||
| Versions: | 15.2.1 | Frequency of Occurrence | Occasional | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) backtrace_logs.zip | |||
| Description: | As noticed on Jenkins during some gates it appears as though sometimes during bridging (be it simple or elsewhere) the cloning of a stream topology results in a crash. Why this is... is unclear.
You can see it happening at https://jenkins2.asterisk.org/job/gate-ast-master-pjsip/370/ but I've also attached the backtrace and full log. It appears that an SDP negotiation is completing at the same time and the channel isn't locked - resulting in the topology being destroyed while being accessed. | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2018-02-22 13:35:46.121-0600 Change 8308 merged by Jenkins2: bridge_simple.c: Fix stream topology handling. [https://gerrit.asterisk.org/8308|https://gerrit.asterisk.org/8308] By: Friendly Automation (friendly-automation) 2018-02-22 13:36:07.793-0600 Change 8309 merged by Jenkins2: bridge_simple.c: Fix stream topology handling. [https://gerrit.asterisk.org/8309|https://gerrit.asterisk.org/8309] | ||||